Correct overflow issue for popup's block-display

--- a/src/scss/popup-scss/_popup-block.scss
+++ b/src/scss/popup-scss/_popup-block.scss
@@ -25,8 +25,23 @@
 
                 font-size: 16px;
 
-                overflow-x: scroll;
+                overflow-x: auto;
                 white-space: nowrap;
+
+                &::-webkit-scrollbar {
+                    margin-block-start: 10px;
+                    inline-size: 10px;
+                    block-size: 10px;
+                }
+
+                &::-webkit-scrollbar-track {
+                    background: transparent;
+                }
+
+                &::-webkit-scrollbar-thumb {
+                    background-color: gray;
+                    border-radius: 10px;
+                }
             }
 
             @include general.btn($size: 24px, $inline: 40px, $block: 40px);
